[package]
name = "Rust-Light-Vulkan-Engine"
version = "0.1.0"
authors = ["Mot <37093297+TomSimpsonNZ@users.noreply.github.com>"]
edition = "2018"
build = "build.rs" # Builds the glsl shader modules at compilation time

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.4"
ash = "0.33.*"
ash-window = "0.7.0"
winit = "0.25.*"
winit_input_helper = "0.10.0"
winapi = "0.3.9"
nalgebra = "0.29.0"
time = "0.3.5"
tobj = "3.2.*"
ordered-float = "2.10.*"